test(backend): expand test coverage for hardened services
Update 21 existing tests and add 13 new test files covering
AdminController, EnterpriseController, ReviewerController,
ApiResponse, JwtAccessDeniedHandler, enums, MessageUtils,
TransactionRepository, MinioHealthIndicator, RsaKeyMigration.